--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,19 +19,26 @@
                 <span class="navbar-toggler-icon"></span>
               </button> 
             
+            <% if user_signed_in? %>
               <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav navbar-light ml-auto h1">
                   <li class="nav-item active">
                       <%= link_to "New Recipe", new_recipe_path, class: "navbar-brand" %>
                   </li>
                   <li class="nav-item">
-                      <%= link_to "Sign Out", root_path, class: "navbar-brand" %>
+                      <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-brand" %>
                   </li>
                 </ul>
               </div>
+            <% else %>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar-brand" %></li>
+        <li><%= link_to "Sign In", new_user_session_path, class: "navbar-brand" %></li>
+      </ul>
+    <% end %>
          </div>
         </nav>
-        
+
 <div class="">
   <% flash.each do |name, msg| %>
   <%= content_tag :div, msg, class:"alert container text-success h4 mt-5" %>
