--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -9,6 +9,7 @@
                 <p class="description">
                     <%= @recipe.description %>
                 </p>
+                <p>Submitted by <%= @recipe.user.email %></p>
             </div>
         </div>
     </div>
@@ -41,8 +42,10 @@
     <div class="row">
         <div class="col-md-12">
             <%= link_to "Back", root_path, class:'btn btn-light' %>
-            <%= link_to "Edit", edit_recipe_path, class:'btn btn-light' %>
-            <%= link_to "Delete", recipe_path, method: :delete, data:{confirm:"Are you sure?"}, class:'btn btn-light' %>
+            <% if user_signed_in? %>
+                <%= link_to "Edit", edit_recipe_path, class:'btn btn-light' %>
+                <%= link_to "Delete", recipe_path, method: :delete, data:{confirm:"Are you sure?"}, class:'btn btn-light' %>
+            <% end %>
         </div>
     </div>
 </div>
